monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ReferencedSymbol.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar ReferencedSymbol extends de.monticore.grammar.cocos.valid.SubGrammarWithSymbol,
                                 de.monticore.grammar.cocos.valid.Attributes{

  symbol A = Name;

  B = bname:Name@A;

  D = sub:Name@SubSymbol;

  S = state:Name@State;

}
